--- a/Link 1 - sinarharian/sinarharian.ipynb
+++ b/Link 1 - sinarharian/sinarharian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2569,7 +2569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2599,6 +2599,7 @@
        "      <th>Author Name</th>\n",
        "      <th>Link</th>\n",
        "      <th>Article Description</th>\n",
+       "      <th>Content</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2610,6 +2611,7 @@
        "      <td>Nasional</td>\n",
        "      <td>https://www.sinarharian.com.my/article/231704/...</td>\n",
        "      <td>Ditubuhkan pada tahun 1975 oleh Perdana Mente...</td>\n",
+       "      <td>Ditubuhkan pada tahun 1975 oleh Perdana Menter...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -2619,6 +2621,7 @@
        "      <td>Nasional</td>\n",
        "      <td>https://www.sinarharian.com.my/article/231609/...</td>\n",
        "      <td>SHAH ALAM - Sekumpulan rakyat Malaysia memfai...</td>\n",
+       "      <td>SHAH ALAM - Sekumpulan rakyat Malaysia memfail...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -2628,24 +2631,27 @@
        "      <td>Covid-19</td>\n",
        "      <td>https://www.sinarharian.com.my/article/190182/...</td>\n",
        "      <td>GEORGETOWN - Berita palsu yang disebarkan mel...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>13</th>\n",
        "      <td>Berangan Aqua Park tarikan baharu di Kedah</td>\n",
        "      <td>2021-09-09</td>\n",
        "      <td>09:10:00</td>\n",
        "      <td>EDISI</td>\n",
        "      <td>https://www.sinarharian.com.my/article/160373/...</td>\n",
        "      <td>SUNGAI PETANI - Taman tema mini, Berangan Aqu...</td>\n",
+       "      <td>SUNGAI PETANI - Taman tema mini, Berangan Aqua...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>14</th>\n",
        "      <td>Haram menolak pengambilan vaksin</td>\n",
        "      <td>2021-05-23</td>\n",
        "      <td>08:00:00</td>\n",
        "      <td>Pendapat</td>\n",
        "      <td>https://www.sinarharian.com.my/article/139989/...</td>\n",
        "      <td>MANA-mana pihak, individu, agamawan, ilmuan y...</td>\n",
+       "      <td>MANA-mana pihak, individu, agamawan, ilmuan ya...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2655,55 +2661,61 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>835</th>\n",
+       "      <th>936</th>\n",
        "      <td>Peka B40 'game changer' untuk perkhidmatan kes...</td>\n",
        "      <td>2020-01-11</td>\n",
        "      <td>10:30:00</td>\n",
        "      <td>Nasional</td>\n",
        "      <td>https://www.sinarharian.com.my/article/65459/b...</td>\n",
        "      <td>KUALA LUMPUR - Skim Peduli Kesihatan untuk Ku...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>836</th>\n",
+       "      <th>938</th>\n",
        "      <td>KKM sahkan tiga kes polio di Sabah</td>\n",
        "      <td>2020-01-10</td>\n",
        "      <td>11:55:00</td>\n",
        "      <td>Sabah Sarawak</td>\n",
        "      <td>https://www.sinarharian.com.my/article/65319/e...</td>\n",
        "      <td>SHAH ALAM - Kementerian Kesihatan (KKM) memak...</td>\n",
+       "      <td>SHAH ALAM - Kementerian Kesihatan (KKM) memakl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>837</th>\n",
+       "      <th>939</th>\n",
        "      <td>Dua kes influenza A di Selangor di Cyberjaya, ...</td>\n",
        "      <td>2020-01-10</td>\n",
        "      <td>10:05:00</td>\n",
        "      <td>Selangor KL</td>\n",
        "      <td>https://www.sinarharian.com.my/article/65308/e...</td>\n",
        "      <td>SHAH ALAM - Jabatan Kesihatan Negeri Selangor...</td>\n",
+       "      <td>SHAH ALAM - Jabatan Kesihatan Negeri Selangor ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>838</th>\n",
+       "      <th>940</th>\n",
        "      <td>Influenza: Pesakit wajib dikuarantin elak penu...</td>\n",
        "      <td>2020-01-10</td>\n",
        "      <td>08:45:00</td>\n",
        "      <td>Nasional</td>\n",
        "      <td>https://www.sinarharian.com.my/article/65297/b...</td>\n",
        "      <td>SHAH ALAM - Kerajaan perlu mewajibkan arahan ...</td>\n",
+       "      <td>SHAH ALAM - Kerajaan perlu mewajibkan arahan k...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>839</th>\n",
+       "      <th>941</th>\n",
        "      <td>Bekalan vaksin influenza di klinik swasta terhad</td>\n",
        "      <td>2020-01-10</td>\n",
        "      <td>08:40:00</td>\n",
        "      <td>Nasional</td>\n",
        "      <td>https://www.sinarharian.com.my/article/65298/b...</td>\n",
        "      <td>KUALA LUMPUR - Selepas isu dakwaan kekurangan...</td>\n",
+       "      <td>KUALA LUMPUR - Selepas isu dakwaan kekurangan ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>831 rows × 6 columns</p>\n",
+       "<p>831 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2711,52 +2723,65 @@
        "9     Rukun Tetangga: Tonggak perpaduan dalam komuniti  2022-11-17  11:08:00   \n",
        "10      KJ, Dr Noor Hisham disaman isu vaksin Covid-19  2022-11-16  17:41:00   \n",
        "11   Berita palsu antara punca masyarakat Melayu to...  2022-02-28  13:45:00   \n",
-       "12          Berangan Aqua Park tarikan baharu di Kedah  2021-09-09  09:10:00   \n",
-       "13                    Haram menolak pengambilan vaksin  2021-05-23  08:00:00   \n",
+       "13          Berangan Aqua Park tarikan baharu di Kedah  2021-09-09  09:10:00   \n",
+       "14                    Haram menolak pengambilan vaksin  2021-05-23  08:00:00   \n",
        "..                                                 ...         ...       ...   \n",
-       "835  Peka B40 'game changer' untuk perkhidmatan kes...  2020-01-11  10:30:00   \n",
-       "836                 KKM sahkan tiga kes polio di Sabah  2020-01-10  11:55:00   \n",
-       "837  Dua kes influenza A di Selangor di Cyberjaya, ...  2020-01-10  10:05:00   \n",
-       "838  Influenza: Pesakit wajib dikuarantin elak penu...  2020-01-10  08:45:00   \n",
-       "839   Bekalan vaksin influenza di klinik swasta terhad  2020-01-10  08:40:00   \n",
+       "936  Peka B40 'game changer' untuk perkhidmatan kes...  2020-01-11  10:30:00   \n",
+       "938                 KKM sahkan tiga kes polio di Sabah  2020-01-10  11:55:00   \n",
+       "939  Dua kes influenza A di Selangor di Cyberjaya, ...  2020-01-10  10:05:00   \n",
+       "940  Influenza: Pesakit wajib dikuarantin elak penu...  2020-01-10  08:45:00   \n",
+       "941   Bekalan vaksin influenza di klinik swasta terhad  2020-01-10  08:40:00   \n",
        "\n",
        "         Author Name                                               Link  \\\n",
        "9          Nasional   https://www.sinarharian.com.my/article/231704/...   \n",
        "10         Nasional   https://www.sinarharian.com.my/article/231609/...   \n",
        "11         Covid-19   https://www.sinarharian.com.my/article/190182/...   \n",
-       "12            EDISI   https://www.sinarharian.com.my/article/160373/...   \n",
-       "13         Pendapat   https://www.sinarharian.com.my/article/139989/...   \n",
+       "13            EDISI   https://www.sinarharian.com.my/article/160373/...   \n",
+       "14         Pendapat   https://www.sinarharian.com.my/article/139989/...   \n",
        "..               ...                                                ...   \n",
-       "835        Nasional   https://www.sinarharian.com.my/article/65459/b...   \n",
-       "836   Sabah Sarawak   https://www.sinarharian.com.my/article/65319/e...   \n",
-       "837     Selangor KL   https://www.sinarharian.com.my/article/65308/e...   \n",
-       "838        Nasional   https://www.sinarharian.com.my/article/65297/b...   \n",
-       "839        Nasional   https://www.sinarharian.com.my/article/65298/b...   \n",
+       "936        Nasional   https://www.sinarharian.com.my/article/65459/b...   \n",
+       "938   Sabah Sarawak   https://www.sinarharian.com.my/article/65319/e...   \n",
+       "939     Selangor KL   https://www.sinarharian.com.my/article/65308/e...   \n",
+       "940        Nasional   https://www.sinarharian.com.my/article/65297/b...   \n",
+       "941        Nasional   https://www.sinarharian.com.my/article/65298/b...   \n",
        "\n",
-       "                                   Article Description  \n",
-       "9     Ditubuhkan pada tahun 1975 oleh Perdana Mente...  \n",
-       "10    SHAH ALAM - Sekumpulan rakyat Malaysia memfai...  \n",
-       "11    GEORGETOWN - Berita palsu yang disebarkan mel...  \n",
-       "12    SUNGAI PETANI - Taman tema mini, Berangan Aqu...  \n",
-       "13    MANA-mana pihak, individu, agamawan, ilmuan y...  \n",
+       "                                   Article Description  \\\n",
+       "9     Ditubuhkan pada tahun 1975 oleh Perdana Mente...   \n",
+       "10    SHAH ALAM - Sekumpulan rakyat Malaysia memfai...   \n",
+       "11    GEORGETOWN - Berita palsu yang disebarkan mel...   \n",
+       "13    SUNGAI PETANI - Taman tema mini, Berangan Aqu...   \n",
+       "14    MANA-mana pihak, individu, agamawan, ilmuan y...   \n",
+       "..                                                 ...   \n",
+       "936   KUALA LUMPUR - Skim Peduli Kesihatan untuk Ku...   \n",
+       "938   SHAH ALAM - Kementerian Kesihatan (KKM) memak...   \n",
+       "939   SHAH ALAM - Jabatan Kesihatan Negeri Selangor...   \n",
+       "940   SHAH ALAM - Kerajaan perlu mewajibkan arahan ...   \n",
+       "941   KUALA LUMPUR - Selepas isu dakwaan kekurangan...   \n",
+       "\n",
+       "                                               Content  \n",
+       "9    Ditubuhkan pada tahun 1975 oleh Perdana Menter...  \n",
+       "10   SHAH ALAM - Sekumpulan rakyat Malaysia memfail...  \n",
+       "11                                                 NaN  \n",
+       "13   SUNGAI PETANI - Taman tema mini, Berangan Aqua...  \n",
+       "14   MANA-mana pihak, individu, agamawan, ilmuan ya...  \n",
        "..                                                 ...  \n",
-       "835   KUALA LUMPUR - Skim Peduli Kesihatan untuk Ku...  \n",
-       "836   SHAH ALAM - Kementerian Kesihatan (KKM) memak...  \n",
-       "837   SHAH ALAM - Jabatan Kesihatan Negeri Selangor...  \n",
-       "838   SHAH ALAM - Kerajaan perlu mewajibkan arahan ...  \n",
-       "839   KUALA LUMPUR - Selepas isu dakwaan kekurangan...  \n",
+       "936                                                NaN  \n",
+       "938  SHAH ALAM - Kementerian Kesihatan (KKM) memakl...  \n",
+       "939  SHAH ALAM - Jabatan Kesihatan Negeri Selangor ...  \n",
+       "940  SHAH ALAM - Kerajaan perlu mewajibkan arahan k...  \n",
+       "941  KUALA LUMPUR - Selepas isu dakwaan kekurangan ...  \n",
        "\n",
-       "[831 rows x 6 columns]"
+       "[831 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# only get dates before 2023\n",
-    "site_data_correct_time = pd.read_csv('sinarharian.csv')\n",
+    "site_data_correct_time = pd.read_csv('sinarharian_with_text.csv')\n",
     "site_data_correct_time = site_data_correct_time[(site_data_correct_time['Date'] < '2023-01-01')]\n",
     "site_data_correct_time.to_csv('sinarharian_with_text_corrected.csv', encoding='utf-8', index=False)\n",
     "site_data_correct_time"
